# ZoomcapRepos

./: .gitignore  README.md
llm/: notebook.ipynb  pyproject.toml
